# Global-Technologies

./: .env.example  .gitignore  Caddyfile  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  manage.py  requirements.txt
backend/core/: views.py
backend/global_tech/: settings.py  urls.py
backend/order/: api.py  models.py  schemas.py
backend/product/: admin.py  api.py  models.py  schemas.py  serializers.py  views.py
backend/product/migrations/: 0001_initial.py
backend/quotes/: api.py  models.py  schemas.py  tasks.py
backend/templates/: about.html  base.html  index.html  product_detail.html
backend/user/: api.py  models.py  schemas.py  tasks.py
backend/user/migrations/: 0001_initial.py
global_tech/: asgi.py  settings.py  urls.py  wsgi.py
